# Synchro-socket-server

./: .env  .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Procfile  README.md  docker-compose-test.yml  docker-compose.yml  dockerfile  pyproject.toml  requirements.txt
 .github/workflows/: django.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: django.yml  docker.yml  environment.yml
Channel/: decorator.py  tests.py  urls.py  views.py
Consumer/: models.py  tests.py  urls.py  views.py
Consumer/management/commands/: defaultUser.py
Consumer/migrations/: 0001_initial.py
Django/: asgi.py  routing.py  settings.py  urls.py  wsgi.py
Socket/: tests.py  urls.py  user.py
User/: decoder.py  decorator.py  tests.py  urls.py  views.py
