[tool.poetry]
name = "synchro-server"
version = "0.1.0"
description = ""
authors = ["Peter D. Maquiran <petermaquiran29@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2.4"
PyJWT = "^2.1.0"
djangorestframework-simplejwt = "^4.7.1"
python-decouple = "^3.4"
django-rest-swagger = "^2.2.0"
channels = "^3.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
